--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "```bash\r npm init -y\r ```",
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^2.4.3",
@@ -18,7 +18,15 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
-    "prisma": "^6.3.1",
-    "zod": "^3.24.1"
-  }
+    "prisma": "^6.4.1",
+    "zod": "^3.24.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Missboonyos/cc19-front-to-back-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Missboonyos/cc19-front-to-back-api/issues"
+  },
+  "homepage": "https://github.com/Missboonyos/cc19-front-to-back-api#readme"
 }
