--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "zod": "^3.24.2"
   },
   "repository": {
